restructure clean architecture
